--- a/P style.css
+++ b/P style.css
@@ -558,27 +558,27 @@ img{
     font-size: var(--font-size-11);
 }
 
-/*BLOG SECTION */
+/*CERTIFICATE SECTION */
 
-.blog-container{
+.certificate-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 30px;
     padding: 30px 0;
 }
 
-.blog-post{ position: relative;}
+.certificate-post{ position: relative;}
 
-.blog-post .blog-img-box{ overflow: hidden;}
+.certificate-post .certificate-img-box{ overflow: hidden;}
 
-.blog-post .blog-img-box img{
+.certificate-post .certificate-img-box img{
     display: block;
     transition: all .5s ease;
 }
 
-.blog-post .blog-img-box:hover img{ transform: scale(1.1);}
+.certificate-post .certificate-img-box:hover img{ transform: scale(1.1);}
 
-.blog-post .blog-category{
+.certificate-post .certificate-category{
     position: absolute;
     top: 10px;
     left: 10px;
@@ -587,18 +587,18 @@ img{
     font-size: var(--font-size-11);
 }
 
-.blog-post .blog-info{
+.certificate-post .certificate-info{
     background: var(--background-dark-80);
     color: var(--color-white-60);
     padding: 10px;
 }
 
-.blog-post .publish-date{
+.certificate-post .publish-date{
     font-size: var(--font-size-11);
     color: var(--color-white-60);
 }
 
-.blog-post .blog-title{
+.certificate-post .certificate-title{
     font-size: var(--font-size-18);
     font-weight: 600;
     margin-bottom: 10px;
